package com.greentree.engine.moon.render.pipeline.material;


public interface Property {
	
	void bind(PropertyLocation location, PropertyBindContext context);
	
}

