package com.greentree.engine.moon.render.pipeline.material;




public interface PropertyBindContext {
	
	int nextEmptyTextureSlot();
	
}
